--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </section>
 
   <footer>
-    <p>© 2024 Charles Foster | Powered by Cryptocurrency</p>
+    <p>Charles Foster</p>
   </footer>
 
   <script src="dist/app.js"></script>
